// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography Component by default should match snapshot 1`] = `
<p
  className="root body"
>
  Test String
</p>
`;

exports[`Typography Component should use default tagnames depending on "variant" prop "as" prop provided as well as "variant" prop 1`] = `
<h1
  className="root section"
>
  Foo
</h1>
`;

exports[`Typography Component should use default tagnames depending on "variant" prop "body" variant provided 1`] = `
<p
  className="root body"
>
  Foo
</p>
`;

exports[`Typography Component should use default tagnames depending on "variant" prop "caption" variant provided 1`] = `
<p
  className="root caption"
>
  Foo
</p>
`;

exports[`Typography Component should use default tagnames depending on "variant" prop "header" variant provided 1`] = `
<h2
  className="root header"
>
  Foo
</h2>
`;

exports[`Typography Component should use default tagnames depending on "variant" prop "section" variant provided 1`] = `
<h3
  className="root section"
>
  Foo
</h3>
`;

exports[`Typography Component should use default tagnames depending on "variant" prop "title" variant provided 1`] = `
<h1
  className="root title"
>
  Foo
</h1>
`;

exports[`Typography Component should use default tagnames depending on "variant" prop no variant provided 1`] = `
<p
  className="root body"
>
  Foo
</p>
`;

exports[`Typography Component when pass "button" string to \`as\` property should match snapshot 1`] = `
<button
  className="root body"
>
  Test String
</button>
`;

exports[`Typography Component when pass React.Component to \`as\` property should match snapshot 1`] = `
<p
  className="root body"
>
  Test String
</p>
`;
